<b><u> v3.04, 09.08.2017</b></u>
<font color=#FF8C00>&#9830;</font> Set the font in the install step messages.
<font color=#FF8C00>&#9830;</font> Change the S&L Datatext (Friend, Guild) to use text instead of the icon.
<font color=#FF8C00>&#9830;</font> Fix Pet castbar position.
<font color=#FF8C00>&#9830;</font> Change the castbar to be default, not transparent.
<font color=#FF8C00>&#9830;</font> Fix a error with version check if the SplashScreen is disabled.

<b><u> v3.03, 07.08.2017</b></u>
<font color=#FF8C00>&#9830;</font> Add some checks to tooltips. :IsForbidden()
<font color=#FF8C00>&#9830;</font> Update a lot of skins.
<font color=#FF8C00>&#9830;</font> Remove the ExtraActionButton Texture -- Credits Blazeflack (CleanBossButton)
<font color=#FF8C00>&#9830;</font> Adds an Player Model to the tooltip. Disabled by default.
<font color=#FF8C00>&#9830;</font> Update Changelog to show after the splashScreen.
<font color=#FF8C00>&#9830;</font> Add UnitFrame option for "AuraSpacing" and "AuraIconText" -- Credits CustomTweaks by Blazeflack
<font color=#FF8C00>&#9830;</font> Fix a lua error with Auctineer.
<font color=#FF8C00>&#9830;</font> Fix a lua error if the ElvUI Actionbars are not enabled.
<font color=#FF8C00>&#9830;</font> Add a new Layout v2 (Still some things to do).

<b><u> v3.02, 24.06.2017</b></u>
<font color=#FF8C00>&#9830;</font> Pimp my AFK Screen. Should be compatible with BenikUI.
<font color=#FF8C00>&#9830;</font> Add an autoscreenshot function on achievements and legendary item drops.
<font color=#FF8C00>&#9830;</font> Update/Add a lot of skins.
<font color=#FF8C00>&#9830;</font> Fix an error in the questinfo skin.
<font color=#FF8C00>&#9830;</font> Add a media section to adjust some fonts. Will be disabled if S&L is loaded.
<font color=#FF8C00>&#9830;</font> Remove the RoleIcons from the Tooltip.
<font color=#FF8C00>&#9830;</font> Add an extern EncounterJournalInfo Frame.

<b><u> v3.01, 19.06.2017</b></u>