@@ -1,3 +1,11 @@
+** v3.05, 17.08.2017**
+* Remove the texture from the ObjectiveTracker Skin.
+* Fix an error in WeakAura Skin.
+* Some layout adjustments.
+* Add a style for the ActionBars Buttons (Like Masque) -- Credits Infinitron for the code permission.
+* Add compatibily with or without ParchementRemover from AddOnSkins.
+* Add a QuestCounter on the WorldMap.
+
 ** v3.04, 09.08.2017**
 * Set the font in the install step messages.
 * Change the S&L Datatext (Friend, Guild) to use text instead of the icon.
