@@ -1,7 +1,7 @@
 ## Interface: 70200
 ## Author: Merathilis
 ## Credits: Benik, Darth Predator, Blazeflack, Azilroka, Infinitron, fgprodigal, Elv & all AddOn Authors who inspired me
-## Version: 3.04
+## Version: 3.05
 ## Title: |cff1784d1ElvUI|r |cffff7d0aMerathilisUI|r
 ## Notes: A decorative edit for ElvUI + additional features.
 ## Notes-deDE: Eine dekorative Erweiterung für ElvUI + einige zusätzliche Funktionen.
