@@ -1,3 +1,11 @@
+<b><u> v3.05, 17.08.2017</b></u>
+<font color=#FF8C00>&#9830;</font> Remove the texture from the ObjectiveTracker Skin.
+<font color=#FF8C00>&#9830;</font> Fix an error in WeakAura Skin.
+<font color=#FF8C00>&#9830;</font> Some layout adjustments.
+<font color=#FF8C00>&#9830;</font> Add a style for the ActionBars Buttons (Like Masque) -- Credits Infinitron for the code permission.
+<font color=#FF8C00>&#9830;</font> Add compatibily with or without ParchementRemover from AddOnSkins.
+<font color=#FF8C00>&#9830;</font> Add a QuestCounter on the WorldMap.
+
 <b><u> v3.04, 09.08.2017</b></u>
 <font color=#FF8C00>&#9830;</font> Set the font in the install step messages.
 <font color=#FF8C00>&#9830;</font> Change the S&L Datatext (Friend, Guild) to use text instead of the icon.
